fix: responsive overflow on all screens + song to Stay Justin Bieber

--- a/portfolio-master/portfolio-master/app/routes/contact/contact.module.css
+++ b/portfolio-master/portfolio-master/app/routes/contact/contact.module.css
@@ -140,6 +140,11 @@
   color: var(--textBody);
   text-decoration: none;
   word-break: break-all;
+  overflow-wrap: anywhere;
+
+  @media (--mediaMobileS) {
+    font-size: var(--fontSizeBodyXS);
+  }
 
   &:is(a):hover {
     color: var(--accent);
